# dradu

./: .gitignore  README.md
client/: Cargo.toml
client/assets/img/: resize.rgba
client/assets/img/dark/: chat.rgba  images.rgba  info.rgba  send.rgba  settings.rgba  tools.rgba
client/assets/img/light/: chat.rgba  images.rgba  info.rgba  send.rgba  settings.rgba  tools.rgba
client/src/: config.rs  error.rs  fs.rs  main.rs  setup.rs  textures.rs  utils.rs
client/src/net/: connection.rs  message.rs  mod.rs
client/src/state/: map_state.rs  mod.rs  room_state.rs
client/src/ui/: loading_screen_ui.rs  main_ui.rs  map_ui.rs  menu_ui.rs  mod.rs  settings_ui.rs  window.rs
client/src/ui/widgets/: grid.rs  mod.rs  relarea.rs
client/src/ui/window_tools/: map_manager.rs  mod.rs
docs/dev/: protocol.md
images/: convert.sh
server/: main.py  message.py  player.py  room.py  server.py  utils.py
